[project]
name = "guest_serv"
version = "0.1.0"


[tool.poetry.dependencies]
python = "3.13.*"
fastapi = "^0.121.0"
pydantic = "^2.12.4"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.44"
asyncio = "^4.0.0"
asyncpg = "^0.30.0"
httpx = "^0.28.1"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
black = ">=24,<26"
isort = "^7.0.0"
pytest = "^8.4.2"
bandit = "^1.8.6"
flake8 = "^7.3.0"
mypy = "^1.18.2"
pylint = "^4.0.2"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
